--- a/front/src/pages/Login/Login.scss
+++ b/front/src/pages/Login/Login.scss
@@ -18,9 +18,11 @@ body {
   border-right: 1px solid #008148;
 }
 
-  .grid-navigation__footer {
+.grid-navigation__footer {
   position: absolute;
+  display: grid;
   grid-template-columns: 1fr 1fr;
+  width: 100vw;
   bottom: 0;
   margin: 0;
   border-top: 1px solid #008148;
@@ -53,12 +55,12 @@ body {
   padding-top: 20px;
   position: absolute;
   display: grid;
-  grid-template-columns: 130px 1fr;
+  grid-template-columns: 40% 1fr;
   text-transform: lowercase;
-  width: 311px;
-  height: 100px;
+  width: 80%;
+  height: 150px;
   left: 44px;
-  top: 390px;
+  top: 450px;
   background: #FFF9E7;
   border-top: 1px solid #008148;
   border-bottom: 1px solid #008148;
@@ -119,7 +121,7 @@ input.error {
   font-weight: 600;
   color: $primary-grn;
   text-transform: uppercase;
-  width: 195px;
+  width: 100%;
   height: 90px;
 }
 
@@ -134,7 +136,7 @@ input.error {
   left: -45px;
   width: 100vw;
   height: 90px;
-  bottom: -180px;
+  bottom: -130px;
   text-align: center;
   border-top: 1px solid #008148;
 }
