styling for listing details mobile view done

--- a/front/src/abstracts/Resets.scss
+++ b/front/src/abstracts/Resets.scss
@@ -24,3 +24,10 @@ li {
 ::-webkit-scrollbar {
     display: none;
 }
+
+img {
+    width: 100%;
+    // height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
