--- a/front/src/abstracts/_index.scss
+++ b/front/src/abstracts/_index.scss
@@ -1,4 +1,7 @@
-@forward "./Typography.scss";
-@forward "./Normalize.scss";
 @forward "./Resets.scss";
+@forward "./Normalize.scss";
 @forward "./Variables.scss";
+@forward "./Typography.scss";
+@forward "./Global.scss";
+
+
