--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -19,7 +19,7 @@ textarea {
 
 input[type="radio"] {
   display: inline-block;
-}
+} */
 
 div.error {
   padding: 10px;
