add listing page componentised

--- a/front/src/abstracts/Resets.scss
+++ b/front/src/abstracts/Resets.scss
@@ -20,9 +20,9 @@ li {
     list-style: none;
 }
 
-::-webkit-scrollbar {
-    display: none;
-}
+// ::-webkit-scrollbar {
+//     display: none;
+// }
 
 img {
     width: 100%;
