image upload styling

--- a/front/src/abstracts/Variables.scss
+++ b/front/src/abstracts/Variables.scss
@@ -1,3 +1,5 @@
+// COLORS
+
 $primary-yellow: #FFDB59; 
 $secondary-yellow: #FFC700;
 
@@ -7,3 +9,6 @@ $secondary-grn: #006639;
 $primary-background: #FFF9E7;
 $secondary-background: #F5EDD5;
 
+// BREAKPOINTS FOR MEDIA QUERIES 
+
+$desktop-width: 1024px;
