--- a/front/src/abstracts/Typography.scss
+++ b/front/src/abstracts/Typography.scss
@@ -47,7 +47,7 @@ h5 {
 // p {
 //   /* 10 * 1.2 = 12px */
 //   font-size: 1.6rem;
-//   // line-height: 1.82rem;
+//   line-height: 2rem;
 //   font-weight: 400;
 // }
 
