--- a/front/src/components/add-listing-form/AddListingForm.scss
+++ b/front/src/components/add-listing-form/AddListingForm.scss
@@ -126,14 +126,18 @@
 
   // FORM OPTION 
   &__form-option {
-    padding: 2.5rem 3.5rem;
+    padding: 2.5rem 0;
     border-bottom: solid 0.1rem $primary-grn;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 
+    label {
+      padding: 0 3.5rem;
+    }
+
     input {
-      padding: 1.5rem 0;
+      padding: 1.5rem 3.5rem;
       font-size: 1.4rem;
 
       &::placeholder {
@@ -143,7 +147,7 @@
     }
 
     textarea {
-      padding: 1.5rem 0;
+      padding: 1.5rem 3.5rem;
       font-size: 1.4rem;
       width: 100%;
       height: 15rem;
