--- a/front/src/components/comments/Comments.scss
+++ b/front/src/components/comments/Comments.scss
@@ -1,27 +1,33 @@
 @use '../../abstracts/index' as *;
 
 .comment {
+  font-size: 1.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  padding: 2.5rem 3.5rem 2rem;
+  border-bottom: solid 0.1rem $primary-grn;
+
     &-header {
       display: flex;
       justify-content: space-between;
       font-size: 1.2rem;
       font-weight: 600;
-      padding: 2.5rem 3.5rem 1.5rem;
     }
   
     &-main {
-      border-bottom: solid 0.1rem $primary-grn;
-      padding: 1rem 3.5rem 3.5rem;
+      padding-bottom: 1rem;
   
       &__delete-btn {
         text-transform: uppercase;
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: 500;
         text-align: left;
         color: $primary-grn;
-        padding: 1rem 3.5rem;
-        width: 100%;
-        border-bottom: solid 0.1rem $primary-grn;
+        width: fit-content;
+        padding: 0.8rem;
+        text-align: center;
+        border: solid 0.1rem $primary-grn;
   
         &:hover {
           background-color: $secondary-background;
