--- a/front/src/components/listing/Listing.scss
+++ b/front/src/components/listing/Listing.scss
@@ -1,129 +1,106 @@
 @use '../../abstracts/index' as *;
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
-.listing-details {
+.listing {
   font-size: 1.4rem;
 
-  &__top-nav {
-    padding: 2.5rem 3.5rem;
-    border-bottom: solid 0.1rem $primary-grn;
+  // HEADER
+  .listing-header {
+    // EDIT-DELETE BUTTONS
+    &__buttons {
+      display: grid;
+      grid-template-columns: 1fr auto 1fr;
+      text-align: center;
+      place-content: center;
+
+      .line {
+        background-color: $primary-grn;
+        width: 0.1rem;
+        height: 100%;
+      }
+
+      button {
+        width: 100%;
+        text-transform: uppercase;
+        color: $primary-grn;
+        font-weight: 600;
+        padding: 1rem;
+        font-size: 1.2rem;
+
+        &:hover {
+          background-color: $secondary-background;
+        }
+      }
+    }
+
+    // IMAGE
+    &__img {
+      width: 100%;
+      height: 25rem;
+    }
+
+    // LISTING NAME
+    &__name {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 2rem 3.5rem;
+      border-bottom: solid $primary-grn 0.1rem;
+
+      h1 {
+        font-size: 2rem;
+        text-transform: capitalize;
+        margin: 0;
+      }
+
+      .heart-icon {
+        font-size: 2rem;
+      }
+    }
   }
 
-  .listing {
-    .listing-header {
-      &__buttons {
-        display: grid;
-        grid-template-columns: 1fr auto 1fr;
-        text-align: center;
-        place-content: center;
+  // LISTING BODY
+  .listing-body {
+    padding: 2.5rem 3.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+    border-bottom: solid $primary-grn 0.1rem;
+    line-height: 2rem;
+  }
 
-        .line {
-          background-color: $primary-grn;
-          width: 0.1rem;
-          height: 100%;
-        }
+  // LISTING FOOTER (LOCATION & PICKUP TIME)
+  .listing-footer {
+    .two-column {
+      display: grid;
+      grid-template-columns: 1fr auto 1fr;
+      place-items: center;
+      border-bottom: solid 0.1rem $primary-grn;
 
-        button {
-          width: 100%;
-          text-transform: uppercase;
-          color: $primary-grn;
-          font-weight: 600;
-          padding: 1rem;
-          font-size: 1.2rem;
-
-          &:hover {
-            background-color: $secondary-background;
-          }
-        }
-      }
-
-      &__img {
-        width: 100%;
-        height: 25rem;
-      }
-
-      &__name {
-        padding: 2rem 3.5rem;
-        border-bottom: solid $primary-grn 0.1rem;
-
-        h1 {
-          font-size: 2rem;
-          text-transform: capitalize;
-          margin: 0;
-        }
-      }
-      &__exchange {
-        padding: 1.5rem 3.5rem;
-        border-bottom: solid $primary-grn 0.1rem;
-        // text-transform: uppercase;
-        width: 100%;
-        display: flex;
-        // justify-content: space-between;
-
-        p:last-of-type {
-          text-transform: capitalize;
-        }
+      .line {
+        width: 0.1rem;
+        background-color: $primary-grn;
+        height: 100%;
       }
     }
 
-    .listing-body {
-      padding: 2.5rem 3.5rem;
+    &__location {
+      padding: 1.5rem 3.5rem 1.5rem;
+    }
+
+    &__pickup-time {
+      padding: 1.5rem 3.5rem 1.5rem 1.5rem;
+    }
+
+    &__location,
+    &__pickup-time {
+      width: 100%;
       display: flex;
-      flex-direction: column;
-      gap: 1.6rem;
-      border-bottom: solid $primary-grn 0.1rem;
-      line-height: 2rem;
-    }
+      justify-content: flex-start;
 
-    .listing-footer {
-      &__quantity {
-        padding: 1.5rem 3.5rem;
-        display: flex;
-        justify-content: space-between;
-        border-bottom: solid 0.1rem $primary-grn;
-
-        p {
-          // text-transform: uppercase;
-          // font-weight: 500;
-
-          &:last-of-type {
-            text-transform: capitalize;
-          }
-        }
-      }
-
-      .two-column {
-        display: grid;
-        grid-template-columns: 1fr auto 1fr;
-        place-items: center;
-        border-bottom: solid 0.1rem $primary-grn;
-
-        .line {
-          width: 0.1rem;
-          background-color: $primary-grn;
-          height: 100%;
-        }
-      }
-
-      &__location {
-        padding: 1.5rem 3.5rem 1.5rem;
-      }
-
-      &__pickup-time {
-        padding: 1.5rem 3.5rem 1.5rem 1.5rem;
-      }
-
-      &__location,
-      &__pickup-time {
-        width: 100%;
-        display: flex;
-        justify-content: flex-start;
-
-        p {
-          text-transform: capitalize;
-          padding-left: 0.5rem;
-          text-align: left;
-        }
+      p {
+        text-transform: capitalize;
+        padding-left: 0.5rem;
+        text-align: left;
       }
     }
   }
