--- a/front/src/abstracts/Variables.scss
+++ b/front/src/abstracts/Variables.scss
@@ -9,6 +9,9 @@ $secondary-grn: #006639;
 $primary-background: #FFF9E7;
 $secondary-background: #F5EDD5;
 
+$primary-error: #EE5A5A;
+$secondary-error: #FFF0F0;
+
 // BREAKPOINTS FOR MEDIA QUERIES 
 
 $desktop-width: 1024px;
