--- a/front/src/pages/Signup/Signup.scss
+++ b/front/src/pages/Signup/Signup.scss
@@ -7,15 +7,15 @@ form.signup, form.login {
   border-radius: 4px;
 }
 
-/* errprs */
-div.error {
-  padding: 10px;
-  background: #ffefef;
-   border: 1px solid rgb(218, 74, 74);
-  color: rgb(218, 74, 74);
-  border-radius: 4px;
-  margin: 20px 0;
-}
-input.error {
-  border: 1px solid rgb(218, 74, 74);
-}
+// /* errprs */
+// div.error {
+//   padding: 10px;
+//   background: #ffefef;
+//    border: 1px solid rgb(218, 74, 74);
+//   color: rgb(218, 74, 74);
+//   border-radius: 4px;
+//   margin: 20px 0;
+// }
+// input.error {
+//   border: 1px solid rgb(218, 74, 74);
+// }
