--- a/front/src/components/circle/Circle.scss
+++ b/front/src/components/circle/Circle.scss
@@ -19,6 +19,7 @@
   &__title {
     font-size: 4.8rem;
     line-height: 6rem;
+    padding: 3rem;
     text-align: center;
     text-transform: lowercase;
   }
