--- a/front/src/pages/Login/Login.scss
+++ b/front/src/pages/Login/Login.scss
@@ -132,16 +132,16 @@
   transform: translate(-50%, -50%);
 }
 
-div.error {
-  width: 200px;
-  padding: 10px;
-  background: #ffefef;
-  border: 1px solid rgb(218, 74, 74);
-  color: rgb(218, 74, 74);
-  border-radius: 4px;
-  margin: 20px 0;
-}
+// div.error {
+//   width: 200px;
+//   padding: 10px;
+//   background: #ffefef;
+//   border: 1px solid rgb(218, 74, 74);
+//   color: rgb(218, 74, 74);
+//   border-radius: 4px;
+//   margin: 20px 0;
+// }
 
-input.error {
-  border: 1px solid rgb(218, 74, 74);
-}
+// input.error {
+//   border: 1px solid rgb(218, 74, 74);
+// }
