--- a/front/src/components/circle/Circle.scss
+++ b/front/src/components/circle/Circle.scss
@@ -14,6 +14,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media (min-width: $desktop-width) {
+      height: 50rem;
+      width: 50rem;
+    }
   }
 
   &__title {
@@ -22,5 +27,11 @@
     padding: 3rem;
     text-align: center;
     text-transform: lowercase;
+
+    @media (min-width: $desktop-width) {
+      font-size: 6.1rem;
+      line-height: 7.7rem;
+      padding: 3.5rem;
+    }
   }
 }
