--- a/front/src/components/filter-buttons/FilterButtons.scss
+++ b/front/src/components/filter-buttons/FilterButtons.scss
@@ -1,29 +1,34 @@
 @use '../../abstracts/index' as *;
 
 .filter-list {
-    display: flex;
-    font-size: 1rem;
-    border-bottom: solid 0.1rem $primary-grn;
-    background-color: $primary-background;
+  display: flex;
+  font-size: 1rem;
+  border-bottom: solid 0.1rem $primary-grn;
+  background-color: $primary-background;
 
-    &__item {
+  @media (min-width: $desktop-width) {
+    width: 50%;
+    margin-left: auto;
+   }
+
+  &__item {
+    width: 100%;
+    border-right: solid 0.1rem $primary-grn;
+    padding: 1rem;
+
+    button {
       width: 100%;
-      border-right: solid 0.1rem $primary-grn;
-      padding: 1rem;
+      text-align: center;
+      text-transform: uppercase;
+      font-weight: 600;
+    }
 
-      button {
-        width: 100%;
-        text-align: center;
-        text-transform: uppercase;
-        font-weight: 600;
-      }
+    &:last-of-type {
+      border-right: none;
+    }
 
-      &:last-of-type {
-        border-right: none;
-      }
-
-      &:hover {
-        background-color: $secondary-background;
-      }
+    &:hover {
+      background-color: $secondary-background;
     }
   }
+}
