--- a/front/src/components/listings-list-view/ListingsListView.scss
+++ b/front/src/components/listings-list-view/ListingsListView.scss
@@ -1,30 +1,29 @@
 @use '../../abstracts/index' as *;
 
 .listings {
-    width: 100%;
-    height: 100%;
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+
+  &-item {
+    padding: 2.5rem 3.5rem;
+    background-color: $primary-background;
+    border-top: solid 0.1rem $primary-grn;
     display: flex;
-    flex-direction: column-reverse;
-    padding-bottom: 6rem;
+    align-items: center;
+    justify-content: space-between;
 
-    &-item {
-      padding: 2.5rem 3.5rem;
-      background-color: $primary-background;
-      border-top: solid 0.1rem $primary-grn;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    
+    &__name {
+      font-size: 1.6rem;
+    }
 
-      &__name {
-        font-size: 1.6rem;
-      }
-
-      .arrow {
-        width: 2.5rem;
-        height: 0.1rem;
-        background-color: $primary-grn;
-        position: relative;
-
+    .arrow {
+      width: 2.5rem;
+      height: 0.1rem;
+      background-color: $primary-grn;
+      position: relative;
 
       &::after {
         content: '';
@@ -38,10 +37,10 @@
         transform: rotate(-45deg);
         -webkit-transform: rotate(-45deg);
       }
-      }
+    }
 
-      &:first-of-type {
-        border-top: solid 0.1rem $primary-grn;
-      }
+    &:first-of-type {
+      border-top: solid 0.1rem $primary-grn;
     }
   }
+}
