--- a/front/src/pages/Home/Home.scss
+++ b/front/src/pages/Home/Home.scss
@@ -4,33 +4,76 @@
   height: 100vh;
   position: relative;
 
+  // HEADER
   &-header {
-    width: 100%;
     position: fixed;
+    width: 100%;
     top: 0;
-    left: 0;
-    z-index: 1000;
+    right: 0;
   }
 
+  // BODY
   &-body {
-    flex: 1;
-    position: relative;
     height: 100%;
-    padding-top: 12rem;
     display: flex;
     flex-direction: column;
+
+    @media (min-width: $desktop-width) {
+      flex-direction: row;
+    }
+
+    .column-left {
+      display: none;
+
+      @media (min-width: $desktop-width) {
+        width: 50%;
+        height: 100%;
+        padding-top: 10rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-right: solid 0.1rem $primary-grn;
+      }
+    }
+
+    .column-right {
+      width: 100%;
+      min-height: 100%;
+      max-height: 100%;
+      padding-top: 12rem;
+      padding-bottom: 6rem;
+      display: flex;
+      flex-direction: column;
+      overflow: scroll;
+
+      @media (min-width: $desktop-width) {
+        width: 50%;
+        height: 100%;
+      }
+
+      .circle-container {
+        @media (min-width: $desktop-width) {
+          display: none;
+        }
+      }
+    }
   }
 
+  // FOOTER
   &-footer {
     position: fixed;
     bottom: 0;
-    left: 0;
+    right: 0;
     z-index: 1000;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     background-color: $primary-background;
     border-top: solid 0.1rem $primary-grn;
+
+    @media (min-width: $desktop-width) {
+      width: 50%;
+    }
 
     .line {
       height: 100%;
