--- a/front/src/pages/Signup/Signup.scss
+++ b/front/src/pages/Signup/Signup.scss
@@ -2,79 +2,42 @@
 
 
 .signup {
-  // border: 1px solid $primary-grn;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   font-family: 'Plus Jakarta Sans', sans-serif;
   font-weight: 600;
   color: $primary-grn;
 
   &-header {
     width: 100vw;
-    border-bottom: 1px solid $primary-grn;
-
-    &__btn {
-      font-family: 'Plus Jakarta Sans', sans-serif;
-      font-weight: 600;
-      color: $primary-grn;
-      text-transform: uppercase;
-      width: 50%;
-      height: 75px;
-    }
+    height: 5vh;
   }
 
   &-body {
-    padding: 15px 0;
-
-
-    &__circle {
-      margin: auto;
-      position: relative;
-      width: 340px;
-      height: 340px;
-      background-color: $primary-yellow;
-      clip-path: circle(50%);
-      display: flex;
-      justify-content: center;
-      align-self: center;
-    }
-
-    &__title {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      display: flex;
-      z-index: 10;
-      font-size: 5rem;
-      line-height: 60px;
-      width: 260px;
-      text-align: center;
-      justify-self: center;
-    }
-
+    height: 50vh;
+    padding: 0;
   }
 
   &-footer {
     border-top: 1px solid $primary-grn;
-    width: 80vw;
+    width: 100vw;
+    height: 45vh;
     margin: auto;
-    height: 40vh;
 
     &__form {
       margin: auto;
     }
 
     &__grid {
-      height: 60px;
-      width: 100%;
+      width: 80%;
+      margin: auto;
       display: grid;
       grid-template-columns: 120px 1fr;
       border-bottom: 1px solid #008148;
     }
 
     &__label {
-      height: 58px;
+      padding: 1.5em;
       display: flex;
       justify-self: start;
       align-items: center;
@@ -83,7 +46,7 @@
     }
 
     &__input {
-      height: 55px;
+      padding: 1.2em;
       align-self: end;
       border: none;
       background-color: $primary-background;
@@ -93,15 +56,13 @@
     }
 
     &__btn {
-      position: absolute;
       font-family: 'Plus Jakarta Sans', sans-serif;
       font-weight: 600;
       color: $primary-grn;
       text-transform: uppercase;
       width: 100%;
-      left: -2px;
-      bottom: 0;
-      height: 85px;
+      height: 10vh;
+      margin-left: 0;
       border-top: 1px solid $primary-grn;
     }
 
@@ -109,18 +70,31 @@
       padding: 10px;
       background: #ffefef;
       border: 1px solid rgb(218, 74, 74);
-      color: black;
       margin: auto;
     }
 
 
     &__conditions {
       display: inline-flex;
+      padding: 2.5rem 5rem;
+    }
+
+    &__p {
+      font-size: 12px;
+      font-weight: 400;
+      padding-left: 1rem;
     }
   }
 }
 
-/* errors */
-input.error {
-  border: 1px solid rgb(218, 74, 74);
+.signup-footer__error {
+  border: solid 0.1rem $primary-error;
+  background-color: $secondary-error;
+  border-radius: 0.4rem;
+  color: $primary-error;
+}
+
+.error-message {
+  padding: 1rem;
+  text-align: center;
 }
