--- a/front/src/components/listing/Listing.scss
+++ b/front/src/components/listing/Listing.scss
@@ -11,6 +11,7 @@
       grid-template-columns: 1fr auto 1fr;
       text-align: center;
       place-content: center;
+      border-bottom: solid $primary-grn 0.1rem;
 
       .line {
         background-color: $primary-grn;
