--- a/front/src/components/back-nav/BackNav.scss
+++ b/front/src/components/back-nav/BackNav.scss
@@ -41,7 +41,7 @@
 
 .back-nav--green {
   background-color: $primary-grn;
-  border-bottom: solid 0.1rem $primary-background;
+  // border-bottom: solid 0.1rem $primary-background;
 
   .back-button {
     .back-arrow {
