--- a/front/src/pages/Signup/Signup.scss
+++ b/front/src/pages/Signup/Signup.scss
@@ -8,36 +8,56 @@
   font-weight: 600;
   color: $primary-grn;
 
-  &-header {
-    width: 100vw;
-    height: 5vh;
+  &-grid {
+    @media (min-width: $desktop-width) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
   }
 
+  // GRID 1
   &-body {
     height: 50vh;
     padding: 0;
+
+    @media (min-width: $desktop-width) {
+      display: flex;
+      justify-content: center;
+      width: 50vw;
+      border-right: 1px solid #008148;
+      height: 100vh;
+    }
   }
 
+  // GRID 2
   &-footer {
     border-top: 1px solid $primary-grn;
     width: 100vw;
     height: 45vh;
     margin: auto;
 
-    &__form {
-      margin: auto;
+    @media (min-width: $desktop-width) {
+      width: 100%;
+      height: 100%;
+      // background-color: aqua;
+      padding-top: 60%;
     }
 
+    // FORM
     &__grid {
       width: 80%;
       margin: auto;
       display: grid;
       grid-template-columns: 120px 1fr;
-      border-bottom: 1px solid #008148;
+      border-top: 1px solid #008148;
+
+      @media (min-width: $desktop-width) {
+        width: 90%;
+      }
     }
 
     &__label {
-      padding: 1.5em;
+      padding: 1.5em 0;
       display: flex;
       justify-self: start;
       align-items: center;
@@ -61,12 +81,14 @@
       color: $primary-grn;
       text-transform: uppercase;
       width: 100%;
-      height: 10vh;
+      height: 8vh;
       margin-left: 0;
       border-top: 1px solid $primary-grn;
+      border-bottom: 1px solid $primary-grn;
     }
 
     &__error {
+      text-align: center;
       padding: 10px;
       background: #ffefef;
       border: 1px solid rgb(218, 74, 74);
@@ -77,6 +99,10 @@
     &__conditions {
       display: inline-flex;
       padding: 2.5rem 5rem;
+
+      @media (min-width: $desktop-width) {
+        padding: 2.5rem 3.5rem;
+      }
     }
 
     &__p {
@@ -92,9 +118,4 @@
   background-color: $secondary-error;
   border-radius: 0.4rem;
   color: $primary-error;
-}
-
-.error-message {
-  padding: 1rem;
-  text-align: center;
 }
