media queries for add / edit listing page

--- a/front/src/components/listing-form/ListingForm.scss
+++ b/front/src/components/listing-form/ListingForm.scss
@@ -48,6 +48,10 @@
       &__img {
         height: 25rem;
         width: 100%;
+
+        @media (min-width: $desktop-width) {
+          height: 35rem;
+        }
       }
 
       &__icon {
