--- a/front/src/pages/AddEditListing/AddEditListing.scss
+++ b/front/src/pages/AddEditListing/AddEditListing.scss
@@ -1,6 +1,7 @@
 @use '../../abstracts/index' as *;
 
-.listing-details {
+
+.add-listing {
   height: 100vh;
   position: relative;
 
@@ -53,3 +54,5 @@
       }
   }
 }
+
+
