--- a/front/src/pages/Landing/Landing.scss
+++ b/front/src/pages/Landing/Landing.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
 
+    // BODY
     &__container {
         margin: auto;
         padding: 0;
@@ -16,6 +17,10 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+
+        @media (min-width: $desktop-width) {
+            overflow: hidden;
+        }
     }
 
     &__title-top {
@@ -23,6 +28,12 @@
         font-size: 16px;
         padding: 2rem;
         z-index: 10;
+
+        @media (min-width: $desktop-width) {
+            position: fixed;
+            top: 50px;
+            font-size: 2rem;
+        }
     }
 
     &__circle1 {
@@ -37,8 +48,10 @@
 
 
         @media (min-width: $desktop-width) {
-            width: 80vw;
-            height: 50%;
+            position: fixed;
+            top: -50%;
+            width: 80%;
+            height: 100%;
             overflow: hidden;
         }
     }
@@ -48,6 +61,13 @@
         width: 140px;
         height: 65px;
         font-size: 6rem;
+        z-index: 10;
+
+        @media (min-width: $desktop-width) {
+            position: fixed;
+            left: 10%;
+            top: 43%;
+        }
     }
 
 
@@ -62,9 +82,10 @@
         z-index: 1;
 
         @media (min-width: $desktop-width) {
-            bottom: -400px;
-            width: 80vw;
-            height: 50%;
+            position: fixed;
+            width: 80%;
+            bottom: -50%;
+            height: 100%;
             overflow: hidden;
         }
     }
@@ -74,6 +95,13 @@
         width: 164px;
         height: 65px;
         font-size: 6rem;
+        z-index: 10;
+
+        @media (min-width: $desktop-width) {
+            position: fixed;
+            right: 10%;
+            top: 43%;
+        }
     }
 
     &__title-bottom {
@@ -81,22 +109,49 @@
         font-size: 16px;
         padding: 2rem;
         z-index: 10;
+
+        @media (min-width: $desktop-width) {
+            position: fixed;
+            bottom: 100px;
+            font-size: 2rem;
+        }
+    }
+
+    // FOOTER
+    &-footer {
+        @media (min-width: $desktop-width) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            z-index: 10;
+        }
     }
 
     &__signin-btn {
         width: 100vw;
         height: 75px;
         border-top: 1px solid $primary-grn;
+        z-index: 10;
+
+        @media (min-width: $desktop-width) {
+            width: 100%;
+        }
     }
 
     &__login-btn {
         width: 100vw;
         height: 75px;
         border-top: 1px solid $primary-grn;
+        z-index: 10;
+
+        @media (min-width: $desktop-width) {
+            width: 100%;
+            border-left: 1px solid $primary-grn;
+        }
     }
 
     &__link {
         font-weight: 600;
         text-transform: uppercase;
+        z-index: 10;
     }
 }
